--- a/Project03_Assignment.ipynb
+++ b/Project03_Assignment.ipynb
@@ -110,12 +110,37 @@
     "# Solution - enter your code solution below\n",
     "#Create the Pay class\n",
     "class Pay(caregiver, schedule):\n",
-    "   def __init__(self, hours):\n",
-    "       super().__init__(hours)\n",
-    "    #Calculate the pay of the caretaker \n",
-    "    pay = hours * 20\n",
-    "with open(\"payrate.txt\", w) as doc:\n",
-    "    \n"
+    "    def __init__(self, name, hourly_rate):\n",
+    "        caregiver.__init__(self, name, shifts)\n",
+    "        schedule.__init__(self)\n",
+    "    #Define a class for calculating the monthly pay.\n",
+    "    def calculate_monthly_pay(self):\n",
+    "        weekly_report = \"Weekly Pay Report:\\n\"\n",
+    "        total_weekly_pay = 0\n",
+    "        for caregiver in self.caregivers:\n",
+    "            weekly_pay = schedule.shifts * 20\n",
+    "            weekly_report += f\"{caregiver.name}: {schedule.shifts} shifts, ${weekly_pay}\\n\"\n",
+    "            total_weekly_pay += weekly_pay\n",
+    "        weekly_report += f\"\\nTotal Weekly Pay: ${total_weekly_pay}\\n\"\n",
+    "        return weekly_report\n",
+    "    #Define a class for calculating the weekly pay.\n",
+    "    def calculate_weekly_pay(self):\n",
+    "        total_weekly_pay = 0\n",
+    "        for caregiver in self.caregivers:\n",
+    "            weekly_pay = schedule.shifts * 20\n",
+    "            weekly_report += f\"{caregiver.name}: {schedule.shifts} shifts, ${weekly_pay}\\n\"\n",
+    "            total_weekly_pay += weekly_pay\n",
+    "        weekly_report += f\"\\nTotal Weekly Pay: ${total_weekly_pay}\\n\"\n",
+    "        return weekly_report\n",
+    "pay_report = PayReport(caregivers)\n",
+    "#Create objects for the class and methods necessary to generate the reports.\n",
+    "weekly_report = Pay.generate_weekly_report()\n",
+    "monthly_report = Pay.generate_monthly_report()\n",
+    "#Write the results of the report methods to files.\n",
+    "with open(\"weekly_report.txt\", \"w\") as file:\n",
+    "    file.write(weekly_report)\n",
+    "with open(\"monthly_report.txt\", \"w\") as file:\n",
+    "    file.write(monthly_report)\n"
    ]
   },
   {
