--- a/Project03_ZSilver.ipynb
+++ b/Project03_ZSilver.ipynb
@@ -26,15 +26,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb7f115-9eba-4f29-918e-b016e6a7edc8",
-   "metadata": {},
-   "source": [
-    "Rename this notebook, replacing \"_Assignment\" with \"_YourName\"<br>\n",
-    "Insert Signature Block Here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8ee05bdb-db2d-41c2-9f23-3af75d058612",
    "metadata": {},
    "source": [
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "cb35b908-6683-4144-816c-051715925504",
    "metadata": {},
    "outputs": [],
@@ -126,8 +117,57 @@
     "# Solution - enter your code solution below\n",
     "from datetime import date, timedelta\n",
     "import calendar\n",
+    "import random\n",
     "\n",
-    "#Schedule Class   \n",
+    "#Caregiver class\n",
+    "class Caregiver:\n",
+    "    #Initializes caregiver attributes\n",
+    "    def __init__(self, name, phone=None, email=None, pay_rate=0.0, hours=0, availability=None):\n",
+    "        self.name = name\n",
+    "        self.phone = phone\n",
+    "        self.email = email\n",
+    "        self.pay_rate = pay_rate\n",
+    "        self.hours = hours\n",
+    "        self.availability = availability\n",
+    "        \n",
+    "    #Adds hours to caregiver\n",
+    "    def add_hours(self, hours):\n",
+    "        self.hours += 6\n",
+    "    \n",
+    "    #Returns number of shifts worked per caregiver\n",
+    "    def get_num_shifts(self):\n",
+    "        if self.hours > 0:\n",
+    "            return self.hours/6\n",
+    "        else:\n",
+    "            return 0\n",
+    "    \n",
+    "    #Returns caregiver availibility for a certain shift\n",
+    "    def get_availability(self, date, shift):\n",
+    "        return self.availability.get(date, {}).get(shift, 'unavailable')\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Caregiver({self.name}, {self.phone}, {self.email}, Pay Rate: ${self.pay_rate:.2f}, Hours: {self.hours})\"\n",
+    "\n",
+    "#Pay\n",
+    "class Pay(Caregiver, Schedule):\n",
+    "    def __init__(self, caregiver):\n",
+    "        self.caregiver = caregiver\n",
+    "        \n",
+    "    #Define a class for calculating the monthly pay.\n",
+    "    def calculate_monthly_pay(self):\n",
+    "        weekly_pay = self.caregiver.hours * self.caregiver.pay_rate\n",
+    "        monthly_pay = 4 * weekly_pay\n",
+    "        monthly_shifts = 4 * self.caregiver.get_num_shifts()\n",
+    "        weekly_report = f\"Monthly Pay Report:\\n{self.caregiver.name}: {monthly_shifts} shifts, ${monthly_pay}\\n\"\n",
+    "        return weekly_report\n",
+    "    \n",
+    "    #Define a class for calculating the weekly pay.\n",
+    "    def calculate_weekly_pay(self):\n",
+    "        weekly_pay = self.caregiver.hours * self.caregiver.pay_rate\n",
+    "        weekly_report = f\"Weekly Pay Report:\\n{self.caregiver.name}: {self.caregiver.get_num_shifts()} shifts, ${weekly_pay}\\n\"\n",
+    "        return weekly_report\n",
+    "\n",
+    "#Schedule Class \n",
     "class Schedule:\n",
     "    #Initializes schedule with startdate, schedule dictionary, list of caregivers, and shifts\n",
     "    def __init__(self, start_date):\n",
@@ -143,10 +183,11 @@
     "        else:\n",
     "            print(\"There are already 8 caregivers working.\")\n",
     "    \n",
-    "    #Generates caregiver's schedules based on availibility and availible shifts\n",
+    "    #Generates caregiver's schedules based on availability and available shifts\n",
     "    #Asks for start date and provides the schedule for the next week\n",
     "    def generate_schedule(self):\n",
     "        current_date = self.start_date\n",
+    "        random.shuffle(self.caregivers)  #Randomizes order to prioritize different caregivers each time\n",
     "        for _ in range(7):  #Generates for every day in the week\n",
     "            for shift in self.shifts:\n",
     "                caregiver = self.assign_shift(current_date, shift) #References assign_shift() method to find best fit\n",
@@ -167,7 +208,6 @@
     "        return None\n",
     "\n",
     "    def display_schedule(self):\n",
-    "\n",
     "        # Start and end date of the week\n",
     "        end_date = self.start_date + timedelta(days=6)\n",
     "        \n",
@@ -245,86 +285,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "ac71b99d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Schedule object at 0x111b8df50>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n        <html>\\n        <head>\\n            <title>Work Schedule: 2024-11-20 to 2024-11-26</title>\\n            <style>\\n                table {\\n                    border-collapse: collapse;\\n                    width: 80%;\\n                    margin: 20px auto;\\n                    font-family: Arial, sans-serif;\\n                }\\n                th, td {\\n                    border: 1px solid #ddd;\\n                    padding: 8px;\\n                    text-align: center;\\n                }\\n                th {\\n                    background-color: #f4f4f4;\\n                }\\n                tr:nth-child(even) { background-color: #f9f9f9; }\\n                h1 {\\n                    text-align: center;\\n                }\\n            </style>\\n        </head>\\n        <body>\\n            <h1>Work Schedule: Nov 20, 2024 to Nov 26, 2024</h1>\\n            <table>\\n                <tr>\\n                    <th>Date</th>\\n                    <th>Day</th>\\n                    <th>AM Shift</th>\\n                    <th>PM Shift</th>\\n                </tr>\\n        \\n                <tr>\\n                    <td>2024-11-20</td>\\n                    <td>Wednesday</td>\\n                    <td>Unassigned</td>\\n                    <td>Alice</td>\\n                </tr>\\n            \\n                <tr>\\n                    <td>2024-11-21</td>\\n                    <td>Thursday</td>\\n                    <td>Alice</td>\\n                    <td>Unassigned</td>\\n                </tr>\\n            \\n                <tr>\\n                    <td>2024-11-22</td>\\n                    <td>Friday</td>\\n                    <td>Alice</td>\\n                    <td>Alice</td>\\n                </tr>\\n            \\n                <tr>\\n                    <td>2024-11-23</td>\\n                    <td>Saturday</td>\\n                    <td>Alice</td>\\n                    <td>Alice</td>\\n                </tr>\\n            \\n                <tr>\\n                    <td>2024-11-24</td>\\n                    <td>Sunday</td>\\n                    <td>Alice</td>\\n                    <td>Alice</td>\\n                </tr>\\n            \\n                <tr>\\n                    <td>2024-11-25</td>\\n                    <td>Monday</td>\\n                    <td>Alice</td>\\n                    <td>Unassigned</td>\\n                </tr>\\n            \\n                <tr>\\n                    <td>2024-11-26</td>\\n                    <td>Tuesday</td>\\n                    <td>Alice</td>\\n                    <td>Unassigned</td>\\n                </tr>\\n            \\n            </table>\\n        </body>\\n        </html>\\n        '"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test code\n",
-    "#comment\n",
     "from datetime import date\n",
     "import webbrowser\n",
-    "\n",
-    "# Create a test schedule\n",
+    "import os\n",
     "\n",
     "#User input for the date\n",
+    "start_date = date(2024, 6, 9)\n",
     "\n",
-    "start_date = date(2024, 11, 20)\n",
+    "#Sets the dates for the next week\n",
+    "current_date = start_date\n",
+    "day1 = current_date.strftime('%Y-%m-%d')\n",
+    "current_date += timedelta(days=1)\n",
+    "day2 = current_date.strftime('%Y-%m-%d')\n",
+    "current_date += timedelta(days=1)\n",
+    "day3 = current_date.strftime('%Y-%m-%d')\n",
+    "current_date += timedelta(days=1)\n",
+    "day4 = current_date.strftime('%Y-%m-%d')\n",
+    "current_date += timedelta(days=1)\n",
+    "day5 = current_date.strftime('%Y-%m-%d')\n",
+    "current_date += timedelta(days=1)\n",
+    "day6 = current_date.strftime('%Y-%m-%d')\n",
+    "current_date += timedelta(days=1)\n",
+    "day7 = current_date.strftime('%Y-%m-%d')\n",
+    "current_date += timedelta(days=1)\n",
+    "\n",
+    "# Create a schedule\n",
     "schedule = Schedule(start_date)\n",
     "\n",
-    "# Add caregivers\n",
-    "caregiver1 = Caregiver( name=\"Alice\", availability={\n",
-    "        '2024-11-20': {'AM': 'unavailable', 'PM': 'available'},\n",
-    "        '2024-11-21': {'AM': 'available', 'PM': 'unavailable'},\n",
-    "        '2024-11-22': {'AM': 'preferred', 'PM': 'available'},\n",
-    "        '2024-11-23': {'AM': 'available', 'PM': 'available'},\n",
-    "        '2024-11-24': {'AM': 'preferred', 'PM': 'available'},\n",
-    "        '2024-11-25': {'AM': 'available', 'PM': 'unavailable'},\n",
-    "        '2024-11-26': {'AM': 'preferred', 'PM': 'unavailable'},\n",
-    "        '2024-11-27': {'AM': 'available', 'PM': 'unavailable'},\n",
-    "    }\n",
-    ")\n",
+    "# Initializes and adds caregivers to the schedule\n",
+    "caregiver1 = Caregiver(\"Alice\", 1234567890, 'alice@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day2: {'AM': 'preferred', 'PM': 'unavailable'},\n",
+    "    day3: {'AM': 'available', 'PM': 'available'},\n",
+    "    day4: {'AM': 'preferred', 'PM': 'unavailable'},\n",
+    "    day5: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "    day6: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day7: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "})\n",
     "\n",
-    "caregiver2 = Caregiver( name=\"Bob\", availability={\n",
-    "        '2024-11-20': {'AM': 'unavailable', 'PM': 'available'},\n",
-    "        '2024-11-21': {'AM': 'available', 'PM': 'unavailable'},\n",
-    "        '2024-11-22': {'AM': 'preferred', 'PM': 'available'},\n",
-    "        '2024-11-23': {'AM': 'available', 'PM': 'available'},\n",
-    "        '2024-11-24': {'AM': 'preferred', 'PM': 'available'},\n",
-    "        '2024-11-25': {'AM': 'available', 'PM': 'unavailable'},\n",
-    "        '2024-11-26': {'AM': 'preferred', 'PM': 'unavailable'},\n",
-    "        '2024-11-27': {'AM': 'available', 'PM': 'unavailable'},\n",
-    "    }\n",
-    ")\n",
+    "caregiver2 = Caregiver(\"Bob\", 1234567890, 'bob@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day2: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "    day3: {'AM': 'preferred', 'PM': 'available'},\n",
+    "    day4: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "    day5: {'AM': 'preferred', 'PM': 'available'},\n",
+    "    day6: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "    day7: {'AM': 'preferred', 'PM': 'unavailable'},\n",
+    "})\n",
+    "\n",
+    "caregiver3 = Caregiver(\"Carol\", 9876543210, 'carol@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day2: {'AM': 'unavailable', 'PM': 'preferred'},\n",
+    "    day3: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day4: {'AM': 'unavailable', 'PM': 'preferred'},\n",
+    "    day5: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day6: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day7: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "})\n",
+    "\n",
+    "caregiver4 = Caregiver(\"David\", 6543210987, 'david@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day2: {'AM': 'preferred', 'PM': 'available'},\n",
+    "    day3: {'AM': 'available', 'PM': 'preferred'},\n",
+    "    day4: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day5: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day6: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day7: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "})\n",
+    "\n",
+    "caregiver5 = Caregiver(\"Eve\", 5678901234, 'eve@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'preferred', 'PM': 'unavailable'},\n",
+    "    day2: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day3: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "    day4: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "    day5: {'AM': 'preferred', 'PM': 'unavailable'},\n",
+    "    day6: {'AM': 'available', 'PM': 'preferred'},\n",
+    "    day7: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "})\n",
+    "\n",
+    "caregiver6 = Caregiver(\"Frank\", 8765432109, 'frank@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day2: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day3: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day4: {'AM': 'preferred', 'PM': 'available'},\n",
+    "    day5: {'AM': 'available', 'PM': 'preferred'},\n",
+    "    day6: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day7: {'AM': 'available', 'PM': 'preferred'},\n",
+    "})\n",
+    "\n",
+    "caregiver7 = Caregiver(\"Grace\", 4567890123, 'grace@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day2: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day3: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day4: {'AM': 'unavailable', 'PM': 'preferred'},\n",
+    "    day5: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day6: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day7: {'AM': 'unavailable', 'PM': 'preferred'},\n",
+    "})\n",
+    "\n",
+    "caregiver8 = Caregiver(\"Hank\", 3210987654, 'hank@gmail.com', 20, availability={\n",
+    "    day1: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "    day2: {'AM': 'unavailable', 'PM': 'available'},\n",
+    "    day3: {'AM': 'available', 'PM': 'preferred'},\n",
+    "    day4: {'AM': 'preferred', 'PM': 'unavailable'},\n",
+    "    day5: {'AM': 'available', 'PM': 'unavailable'},\n",
+    "    day6: {'AM': 'preferred', 'PM': 'unavailable'},\n",
+    "    day7: {'AM': 'unavailable', 'PM': 'unavailable'},\n",
+    "})\n",
     "\n",
     "schedule.add_caregiver(caregiver1)\n",
     "schedule.add_caregiver(caregiver2)\n",
+    "schedule.add_caregiver(caregiver3)\n",
+    "schedule.add_caregiver(caregiver4)\n",
+    "schedule.add_caregiver(caregiver5)\n",
+    "schedule.add_caregiver(caregiver6)\n",
+    "schedule.add_caregiver(caregiver7)\n",
+    "schedule.add_caregiver(caregiver8)\n",
     "\n",
     "# Generate schedule starting from a specific date\n",
     "schedule.generate_schedule()\n",
-    "print(schedule)\n",
-    "\n",
-    "# Test the HTML calendar output\n",
-    "schedule2 = Schedule(start_date)\n",
-    "\n",
-    "# Example schedule assignments \n",
-    "schedule2.schedule[(date(2024, 11, 20), 'AM')] = \"Alice\"\n",
-    "schedule2.schedule[(date(2024, 11, 20), 'PM')] = \"Bob\"\n",
-    "schedule2.schedule[(date(2024, 11, 21), 'AM')] = \"Charlie\"\n",
-    "schedule2.schedule[(date(2024, 11, 21), 'PM')] = \"Alice\"\n",
-    "schedule2.schedule[(date(2024, 11, 22), 'AM')] = \"David\"\n",
-    "schedule2.schedule[(date(2024, 11, 22), 'PM')] = \"Eve\"\n",
     "\n",
     "# Generate the HTML calendar for the week\n",
-    "schedule.display_schedule()"
+    "schedule.display_schedule()\n",
+    "\n",
+    "#Generates a pay report for caregivers\n",
+    "pay_report = Pay(caregiver1)\n",
+    "pay_report5 = Pay(caregiver5)\n",
+    "weekly_report = pay_report.calculate_weekly_pay()\n",
+    "monthly_report = pay_report.calculate_monthly_pay()\n",
+    "weekly_report5 = pay_report5.calculate_weekly_pay()\n",
+    "monthly_report5 = pay_report5.calculate_monthly_pay()\n",
+    "\n",
+    "#Write the results of the report methods to files.\n",
+    "with open(\"weekly_report.txt\", \"w\") as file:\n",
+    "    file.write(weekly_report)\n",
+    "with open(\"monthly_report.txt\", \"w\") as file:\n",
+    "    file.write(monthly_report)\n",
+    "    \n",
+    "with open(\"weekly_report.txt\", \"w\") as file:\n",
+    "    file.write(weekly_report5)\n",
+    "with open(\"monthly_report.txt\", \"w\") as file:\n",
+    "    file.write(monthly_report5)"
    ]
   },
   {
